# GT-ADF-repo

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py  verify.py
.github/workflows/: ci.yml
configs/: cicids2017.yaml  default.yaml  ton_iot.yaml  unsw_nb15.yaml
data/: README.md
data/raw/CICIDS2017/: README.md
data/raw/ToN_IoT/: README.md
data/raw/ToN_IoT/9bafce9d380588c2_MOHANAD_A4706/: FurtherInformation.txt  bag-info.txt  manifest-sha1.txt  tagmanifest-sha1.txt
data/raw/UNSW_NB15/: README.md
docs/: architecture.md
notebooks/: 01_data_exploration.ipynb  02_graph_construction.ipynb  03_model_training.ipynb  04_results_visualization.ipynb
results/figures/: all_metrics.json
results/sample_outputs/: reported_results.json
sample_data/: README.md
sample_data/processed/: cicids2017_train.pt
scripts/: evaluate.py  generate_results.py  generate_sample_data.py  preprocess.py  run_baselines.py  train.py
src/: __init__.py
src/data/: dataset.py  graph_builder.py  preprocessor.py
src/evaluation/: metrics.py
src/models/: attention.py  baselines.py  graph_transformer.py  gt_adf.py
src/training/: loss.py  trainer.py
src/utils/: helpers.py
src/visualization/: plots.py
