[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
/(
  | notebooks
  | data
  | results
)/
'''

[tool.flake8]
max-line-length = 100
exclude = [
    ".git", "__pycache__", "build", "dist",
    "*.egg-info", "venv", ".venv",
    "notebooks", "data", "results"
]
ignore = ["E203", "W503"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "scripts/*", "notebooks/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
